--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ redcarpet:
 author :
   name : Alexandre Matos Martins
   github : felixanya
-  twitter : felixanya
-  email: felixanya@gmail.com
-  linkedin: felixanya
+  twitter : felixanyaok
+  email: sugarmanman@163.com
+  linkedin: felix
 disqus_shortname: felixanya
 analytics: UA-39542235-1
